<resources>
    <string name="app_name"> Nimax-Cocktails</string>
    <string name="menu_title"> Nimax </string>
    <string name="point">"•"</string>
    <string name="drag"> Drag </string>
    <string name="placeholder"> Placeholder</string>
    <string name="confirm"> Confirm </string>
    <string name="drink_asbach"> Asbach </string>
    <string name="drink_bacardi"> Bacardi </string>
    <string name="drink_bitter_lemon"> Bitter Lemon </string>
    <string name="drink_blue_curacao"> Blue Curaçao </string>
    <string name="drink_campari"> Campari </string>
    <string name="drink_captain_morgan"> Captain Morgan </string>
    <string name="drink_cherry_juice"> Cherry Juice </string>
    <string name="drink_coca_cola"> Coca Cola </string>
    <string name="drink_energy_drink"> Energy Drink </string>
    <string name="drink_gin"> Gin </string>
    <string name="drink_grapefruit_juice"> Grapefruit Juice </string>
    <string name="drink_grenadine_syrup"> Grenadine Syrup </string>
    <string name="drink_havana"> Havana</string>
    <string name="drink_joster"> Joster </string>
    <string name="drink_lillet"> Lillet </string>
    <string name="drink_lime_juice"> Lime Juice </string>
    <string name="drink_orange_juice"> Orange Juice </string>
    <string name="drink_passion_fruit_juice"> Passion Fruit Juice </string>
    <string name="drink_pineapple_juice"> Pineapple Juice </string>
    <string name="drink_pitu"> Pitú </string>
    <string name="drink_strawberry_syrup"> Strawberry Syrup </string>
    <string name="drink_tequila"> Tequila </string>
    <string name="drink_tonic_water"> Tonic Water </string>
    <string name="drink_vodka"> Vodka </string>
    <string name="drink_wild_berry"> Wild Berry </string>
    <string name="drink_asbach_info"> Origin: Germany </string>
    <string name="drink_bacardi_info"> Origin: Cuba </string>
    <string name="drink_bitter_lemon_info"> Origin: Unknown </string>
    <string name="drink_blue_curacao_info"> Origin: Curaçao </string>
    <string name="drink_campari_info"> Origin: Italy </string>
    <string name="drink_captain_morgan_info"> Origin: Jamaica </string>
    <string name="drink_cherry_juice_info"> Origin: Asia </string>
    <string name="drink_coca_cola_info"> Origin: USA </string>
    <string name="drink_energy_drink_info"> Origin: Japan </string>
    <string name="drink_gin_info"> Origin: Holland </string>
    <string name="drink_grapefruit_juice_info"> Origin: Barbados </string>
    <string name="drink_grenadine_syrup_info"> Origin: Unknown </string>
    <string name="drink_havana_info"> Origin: Cuba </string>
    <string name="drink_joster_info"> Origin: Germany </string>
    <string name="drink_lillet_info"> Origin: France </string>
    <string name="drink_lime_juice_info"> Origin: Asia </string>
    <string name="drink_orange_juice_info"> Origin: Unknown </string>
    <string name="drink_passion_fruit_juice_info"> Origin: Brazil </string>
    <string name="drink_pineapple_juice_info"> Origin: South America </string>
    <string name="drink_pitu_info"> Origin: Brazil </string>
    <string name="drink_strawberry_syrup_info"> Origin: France </string>
    <string name="drink_tequila_info"> Origin: Mexico </string>
    <string name="drink_tonic_water_info"> Origin: Colonial India </string>
    <string name="drink_vodka_info"> Origin: Poland, Russia, Sweden </string>
    <string name="drink_wild_berry_info"> Origin: Unknown </string>
    <string name="image_menu"> Menu image </string>
    <string name="transition_start_logo" translatable="false"> startLogo </string>
    <string name="transition_recipes_layout" translatable="false"> recipesLayout </string>
    <string name="transition_recipes_logo" translatable="false"> recipesLogo </string>
    <string name="transition_recipes_title" translatable="false"> recipesTitle </string>
    <string name="transition_mixing_layout" translatable="false"> mixingLayout </string>
    <string name="transition_mixing_logo" translatable="false"> mixingLogo </string>
    <string name="transition_mixing_title" translatable="false"> mixingTitle </string>
    <string name="transition_drinkers_layout" translatable="false"> drinkersLayout </string>
    <string name="transition_drinkers_logo" translatable="false"> drinkersLogo </string>
    <string name="transition_drinkers_title" translatable="false"> drinkersTitle </string>
    <string name="transition_settings_layout" translatable="false"> settingsLayout </string>
    <string name="transition_settings_logo" translatable="false"> settingsLogo </string>
    <string name="transition_settings_title" translatable="false"> settingsTitle </string>
    <string name="showcase_menu_intro"> Hello and welcome to the Nimax-Cocktails app. </string>
    <string name="showcase_menu_recipes"> Here you can find and load all of your recipes. </string>
    <string name="showcase_menu_mixing"> Here you can create new cocktails. </string>
    <string name="showcase_menu_drinkers"> Here you can manage your friends and monitor what they drink. </string>
    <string name="showcase_menu_settings"> Here you can configure the machine so that the machine knows which drinks are available. </string>
    <string name="menu_recipes"> Recipes </string>
    <string name="recipes_search"> Search </string>
    <string name="recipes_delete"> Delete </string>
    <string name="recipes_load"> Load </string>
    <string name="recipes_recipe"> Recipe </string>
    <string name="recipes_load_title"> Load recipes </string>
    <string name="recipes_load_description"> Load a predefined set of recipes </string>
    <string name="recipes_clear_title"> Clear recipes </string>
    <string name="recipes_clear_description"> Remove all the recipes </string>
    <string name="recipes_no_recipes"> No recipes found! </string>
    <string name="recipes_no_recipes_info"> Click on the download button in the upper left corner to load a prepared set of recipes. </string>
    <string name="recipes_recipes_load"> A prepared set of recipes was loaded! </string>
    <string name="recipes_image_download"> Image of arrow </string>
    <string name="recipes_image_photo"> Image of camera </string>
    <string name="showcase_recipes_load"> Click this button to load a prepared set of cocktails. </string>
    <string name="showcase_recipes_list"> Click on a cocktail to open a detailed view. </string>
    <string name="showcase_recipes_edit_load"> Click on this button to load this cocktail. </string>
    <string name="showcase_recipes_edit_photo"> Click on this button to take a photo for this cocktail. </string>
    <string name="showcase_recipes_edit_delete"> Once a cocktail is deleted it cannot be restored. </string>
    <string name="menu_mixing"> Mixing </string>
    <string name="mixing_default_drinker"> Default drinker </string>
    <string name="mixing_anti_alc"> Non-alcoholic drinks </string>
    <string name="mixing_level"> Level </string>
    <string name="mixing_alc"> Alcoholic drinks </string>
    <string name="mixing_add_drink"> Click to add: </string>
    <string name="mixing_ml"> ml </string>
    <string name="mixing_add_recipe"> Save Recipe </string>
    <string name="mixing_start_mixing_title"> Start Mixing </string>
    <string name="mixing_start_mixing_description"> Who is ordering? </string>
    <string name="mixing_start_mixing_action"> Start </string>
    <string name="mixing_save_name"> What is the name of the recipe? </string>
    <string name="mixing_name"> Name of the recipe </string>
    <string name="mixing_save"> Save </string>
    <string name="mixing_cancel"> Cancel </string>
    <string name="mixing_no_name"> Your recipe needs a name! </string>
    <string name="mixing_no_drinks"> Your recipe is empty! </string>
    <string name="mixing_known_name"> This name is already taken! </string>
    <string name="mixing_max_amount"> This amount would expand the maximum size of </string>
    <string name="mixing_recipe_saved"> Successfully saved the recipe </string>
    <string name="mixing_image_drinks"> Image of bottle </string>
    <string name="mixing_image_trashcan"> Image of trashcan </string>
    <string name="mixing_image_add"> Add </string>
    <string name="mixing_image_remove"> Remove </string>
    <string name="showcase_mixing_add"> Click on the drink view to add the amount you specified below. </string>
    <string name="showcase_mixing_save"> Click on this button to save the cocktail. </string>
    <string name="showcase_mixing_mix"> Click on this button to start mixing the cocktail.  (not implemented yet) </string>
    <string name="menu_drinkers"> Drinkers </string>
    <string name="drinkers_no_drinkers"> No drinkers found! </string>
    <string name="drinkers_no_drinkers_info"> Click on the button in the upper left corner to add a first drinker. </string>
    <string name="drinkers_add_drinker"> Add Drinker </string>
    <string name="drinkers_name"> Name of the drinker </string>
    <string name="drinkers_save_name"> What is the name of the drinker? </string>
    <string name="drinkers_save"> Save </string>
    <string name="drinkers_clear_title"> Clear drinkers </string>
    <string name="drinkers_clear_description"> Remove all the drinkers </string>
    <string name="drinkers_no_name"> The drinker needs a name! </string>
    <string name="drinkers_drinker_saved"> Successfully added the drinker </string>
    <string name="drinkers_known_name"> This name is already taken! </string>
    <string name="drinkers_last_drink"> Last drink: </string>
    <string name="drinkers_no_last_drink"> Did not order yet </string>
    <string name="drinkers_amount"> Amount: </string>
    <string name="drinkers_alcohol">" Alc.: "</string>
    <string name="showcase_drinkers_add"> Click this button to add a new drinker. </string>
    <string name="showcase_drinkers_list"> Click on a person to open a detailed view. </string>
    <string name="showcase_drinkers_edit_photo"> Click on this button to take a photo for this person. </string>
    <string name="showcase_drinkers_edit_delete"> Once a person is deleted it cannot be restored. </string>
    <string name="menu_settings"> Settings </string>
    <string name="settings_bluetooth"> Bluetooth Connection </string>
    <string name="settings_pump_drinks"> Drinks attached to the pumps </string>
    <string name="settings_roundel_drinks"> Drinks attached to the roundel </string>
    <string name="settings_pump_drinks_description">Click here to show the setup of the pump drinks</string>
    <string name="settings_roundel_description"> Click here to show the setup of the alcoholic drinks </string>
    <string name="settings_others_title"> Others </string>
    <string name="settings_clean"> Cleaning Program </string>
    <string name="settings_clean_description"> Click here to start the cleaning process </string>
    <string name="settings_setup_title"> Setup </string>
    <string name="settings_setup_selection"> The selected drink </string>
    <string name="settings_setup_list_title"> Select the drink you want to modify: </string>
    <string name="settings_setup_control"> Controls </string>
    <string name="settings_setup_play_title"> Start pump </string>
    <string name="settings_setup_pause_title"> Stop pump </string>
    <string name="settings_setup_change_shake"> Change shake mode </string>
    <string name="settings_setup_change_shake_off"> Current mode: Normal </string>
    <string name="settings_setup_change_shake_on"> Current mode: More shakes </string>
    <string name="settings_setup_play_description"> Click here to manually start the pump. </string>
    <string name="settings_setup_pause_description"> Click here to manually stop the pump.</string>
    <string name="settings_setup_modification"> Modify the drink</string>
    <string name="settings_setup_amount"> Amount </string>
    <string name="settings_setup_confirm"> Confirm </string>
    <string name="settings_setup_position">Position</string>
</resources>