<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.nimax.nimax_cocktails.drinkers.DrinkersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drinkers_layout"
        android:transitionName="@string/transition_drinkers_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/drinker_add"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/recipes_image_download"
            android:src="@drawable/button_add_drinker"
            android:layout_marginStart="32dp"
            android:onClick="addDrinker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/grey"
            android:layout_marginStart="140dp" />

        <TextView
            android:id="@+id/drinkers_no_drinkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:text="@string/drinkers_no_drinkers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drinker_add"/>

        <TextView
            android:id="@+id/drinkers_no_drinkers_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:text="@string/drinkers_no_drinkers_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drinkers_no_drinkers" />

        <ListView
            android:id="@+id/drinkers_list"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/drinker_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/drinkers_title"
        android:transitionName="@string/transition_drinkers_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/drinkers_logo"
        android:layout_margin="16dp"
        android:text="@string/menu_drinkers"
        android:textSize="32sp"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/drinkers_logo"
        android:transitionName="@string/transition_drinkers_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_menu"
        android:src="@drawable/menu_button_drinkers"
        tools:layout_editor_absoluteX="347dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>