<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="32dp"
    android:background="@drawable/button"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/placeholder"
        android:background="@drawable/button_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/placeholder"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <Button
        android:id="@+id/dialog_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_accent"
        android:text="@string/mixing_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_confirm"
        app:layout_constraintTop_toBottomOf="@id/dialog_description" />

    <Button
        android:id="@+id/dialog_confirm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_dark"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_description" />

</androidx.constraintlayout.widget.ConstraintLayout>